# kbase

./: .gitattributes  AGENTS.md  Cargo.toml  README.md  review-plan.md  todo.md
.pi/prompts/: compound.md  fixture.md  kbase-context.md  refactor.md  updoc.md
.pi/skills/kb-project/: SKILL.md
.pi/skills/kbase-development/: SKILL.md
.pi/skills/kbase-project/: SKILL.md
.pi/skills/tantivy-ref/: SKILL.md
crates/tree-sitter-md-obsidian/: Cargo.toml  README.md  build.rs
crates/tree-sitter-md-obsidian/examples/: inline_regions.rs  test_extensions.rs  test_sections.rs
crates/tree-sitter-md-obsidian/src/: lib.rs
docs/: config.md  configuration.md  descriptions.md  domains.md  implementation.md  index.md  notes.md  parsing.md  read.md  search.md  spec.md  tags.md  topics.md  tree-sitter.md  vault.md
examples/: parse_demo.rs
plan/: agentic.md  descriptions.md  domain-description.md  extensions-to-consider.md  ideas.md  implementation.md  index.md  kbase-for-kbase.md  link-index-implementation.md  link-index-status.md  link-index.md  parsing.md  rust-dev.md  spec.md  todo.md  wikilinks-agentic.md
scripts/: install.sh
src/: config.rs  lib.rs  main.rs  output.rs  vault.rs
src/commands/: config.rs  domains.rs  index.rs  links.rs  mod.rs  notes.rs  read.rs  tags.rs
src/domains/: extract.rs  mod.rs
src/links/: index.rs  mod.rs  resolve.rs
src/parser/: mod.rs  queries.rs  tree_sitter.rs  types.rs
src/tags/: extract.rs  index.rs  mod.rs
tests/: config.rs  domains.rs  index.rs  notes.rs  read.rs  topics.rs
tests/common/: mod.rs
(+17 files in other folders)
