[package]
name = "kb"
version = "0.1.0"
edition = "2024"
description = "Personal knowledge base CLI for markdown vaults"
repository = "https://github.com/kanatti/kb"

[[bin]]
name = "kb"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# File traversal (ripgrep's own crate — gitignore-aware, handles excludes)
ignore = "0.4"
walkdir = "2.5"

# Text parsing
regex = "1.12"
once_cell = "1.19"

# Serialization (--json output for pi agent)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal output
colored = "3.1"

# Date handling (daily notes)
chrono = "0.4"
dirs = "6.0.0"
shellexpand = "3.1.1"
anyhow = "1.0.101"
toml = "1.0.2"

# Phase 2: SQLite FTS5 index (commented out until needed)
# rusqlite = { version = "0.38", features = ["bundled"] }

# Phase 2: Interactive research TUI (commented out until needed)
# ratatui = "0.30"
# crossterm = "0.29"

[profile.release]
opt-level = 3
strip = true

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.25.0"
