[package]
name = "tree-sitter-md-obsidian"
version = "0.1.0"
edition = "2024"
description = "tree-sitter-markdown with Obsidian extensions (wikilinks and tags) enabled"
license = "MIT"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.26"

[build-dependencies]
cc = "1.0"
